--- a/html/puppies.html
+++ b/html/puppies.html
@@ -374,7 +374,7 @@
           </div>
           <div class="col-lg-6">
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/pJndZoEMlqY/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/Ws50zXgwuIA/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koum2WmvbG1-U1z11LnKaCQ1&amp;rel=0;autoplay=1&amp;controls=0"
@@ -389,7 +389,7 @@
           <div class="col-lg-4 py-2">
             <h5>Black Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotNcvPOmSYI4mBjE8ydooF3&amp;rel=0;autoplay=1&amp;controls=0"
@@ -400,7 +400,7 @@
           <div class="col-lg-4 py-2">
             <h5>Brown Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/RcRf2zrstOI/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/2UDJVBSi8LQ/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kot41yx1a4Y2EA5rVoi_keRq&amp;rel=0;autoplay=1&amp;controls=0"
@@ -411,7 +411,7 @@
           <div class="col-lg-4 py-2">
             <h5>Green Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/41RGmL4TwLc/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/Yvd6mDYOcL0/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFuXYXkN2kqGMTU2hv9Iuu&amp;rel=0;autoplay=1&amp;controls=0"
@@ -424,10 +424,10 @@
           <div class="col-lg-4 py-2">
             <h5>Red Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/wglrExw3G-8/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/EoqlfGJoRHM/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kouy8_lSbvnJyx-_nSmEUaWw&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosbNNVE4im2vxcSx_3xhso2&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -435,7 +435,7 @@
           <div class="col-lg-4 py-2">
             <h5>Purple Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/lE6v8_g3HA0/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/VumzpDmEeDI/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouHUXnQjWLR9k3NkwLZW2OU&amp;rel=0;autoplay=1&amp;controls=0"
@@ -446,7 +446,7 @@
           <div class="col-lg-4 py-2">
             <h5>Yellow Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/4c2mpprfZGI/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/JQs8ljxj-UY/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovLsn9Xe3Jwqv1YCkMNDd8_&amp;rel=0;autoplay=1&amp;controls=0"
@@ -459,7 +459,7 @@
           <div class="col-lg-4 py-2">
             <h5>Pink Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/ZWbmSNIT1uM/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/SduMKikowpg/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovCrcQWetCifR4NinjYH9jl&amp;rel=0;autoplay=1&amp;controls=0"
@@ -470,7 +470,7 @@
           <div class="col-lg-4 py-2">
             <h5>White Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/SBrjLIur18I/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/rlco8TcYbSw/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovwuPzie8bzn19PBMSejScT&amp;rel=0;autoplay=1&amp;controls=0"
@@ -481,7 +481,7 @@
           <div class="col-lg-4 py-2">
             <h5>Light Blue Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/SBrjLIur18I/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/9TsQ-5f8PEg/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koul3gINxAty9m_wToBWTweP&amp;rel=0;autoplay=1&amp;controls=0"
@@ -494,7 +494,7 @@
           <div class="col-lg-4 py-2">
             <h5>Light Purple Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/RDslEFHIIik/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouWqSEWCp8CLL0esDLsMoyC&amp;rel=0;autoplay=1&amp;controls=0"
@@ -505,7 +505,7 @@
           <div class="col-lg-4 py-2">
             <h5>Orange Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/RcRf2zrstOI/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/9TGEr_0oRh0/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotrnpbZ22nVBOpFjmrsUmaW&amp;rel=0;autoplay=1&amp;controls=0"
@@ -516,7 +516,7 @@
           <div class="col-lg-4 py-2">
             <h5>Tan Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/41RGmL4TwLc/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/9ENKKU-BxAc/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosUyvx3hXYeXOElIY1q3hrJ&amp;rel=0;autoplay=1&amp;controls=0"
@@ -529,7 +529,7 @@
           <div class="col-lg-4 py-2">
             <h5>Blue Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <!--<img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />-->
+              <img alt="Image" src="http://i.ytimg.com/vi/f-Q6KVgMMTs/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kott7JjtVsMXu6uWCFLgWcRZ&amp;rel=0;autoplay=1&amp;controls=0"
