--- a/html/home.html
+++ b/html/home.html
@@ -133,7 +133,7 @@
             <span class="h2 d-block">Welcome to Trails and Tails Doodles!</span>
             <p class="lead"> Our dogs are adventurous joyful souls that live in our home with us and are part of our family. When you choose a puppy from us, you are gaining a loyal, affectionate family member.</p>
             <p class="lead">We start each puppy off on the right paw with <a href="stimulation.html">Early Neurological Stimulation</a> and we send a copy of "My Smart Puppy" home with you.</p>
-            <p class="lead">We are focused on red Goldendoodle puppies. We think our reds are stunning, and we hope you do too.</p>
+            <p class="lead">We are focused on red Goldendoodle and colorful Aussiedoodle puppies. We think our reds are stunning, and we hope you do too.</p>
             <a href="puppies.html" class="btn btn-lg btn-primary rounded">Available Puppies</a>
           </div>
         </div>
