--- a/html/puppies.html
+++ b/html/puppies.html
@@ -180,7 +180,7 @@
                   <p><strong>Parents:</strong><span> Molly &amp; Rio</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Birth:</strong><span> March 14, 2021</span></p>
+                  <p><strong>Birth Date:</strong><span> March 19, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Take Home:</strong><span> May 16, 2021</span></p>
