--- a/html/home.html
+++ b/html/home.html
@@ -83,7 +83,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-8">
-              <h2 class="text-white">Red Mini Goldendoodles by</h2>
+              <h2 class="text-white">Mini Golden & Aussie Doodles by</h2>
               <h1 class="display-3 text-white">Trails &amp; Tails Doodles</h1>
               <p class="lead text-light">Our mission is to provide Goldendoodle and Aussiedoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
               <a href="about.html" class="btn btn-primary btn-lg">Our Story</a>
@@ -97,7 +97,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-8">
-              <h2 class="text-white">Red Mini Goldendoodles by</h2>
+              <h2 class="text-white">Mini Golden & Aussie Doodles by</h2>
               <h1 class="display-3 text-white">Trails &amp; Tails Doodles</h1>
               <p class="lead text-light">Our mission is to provide Goldendoodle and Aussiedoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
               <a href="about.html" class="btn btn-primary btn-lg">Our Story</a>
@@ -111,7 +111,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-8">
-              <h2 class="text-white">Red Mini Goldendoodles by</h2>
+              <h2 class="text-white">Mini Golden & Aussie Doodles by</h2>
               <h1 class="display-3 text-white">Trails &amp; Tails Doodles</h1>>
               <p class="lead text-light">Our mission is to provide Goldendoodle and Aussiedoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
               <a href="about.html" class="btn btn-primary btn-lg">Our Story</a>
