--- a/html/puppies.html
+++ b/html/puppies.html
@@ -121,7 +121,6 @@
     </section>
     
     <section class="bg-dark2">
-      <!--
       <div class="container py-3">
         <div class="row">
           <div class="col align-self-center mb-3 mb-lg-0">
@@ -132,10 +131,10 @@
                   <p><strong>Parents:</strong><span> Willow &amp; Rio</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Birth:</strong><span> April 15, 2020</span></p>
+                  <p><strong>Est. Birth:</strong><span> Sept 26, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Take Home:</strong><span> June 7, 2020</span></p>
+                  <p><strong>Est. Take Home:</strong><span> Nov 21, 2020</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 30-35 lbs.</span></p>
@@ -169,7 +168,6 @@
       </div>
       
       <hr class="bg-dark-hr">
-      -->
       <div class="container py-3">
         <div class="row">
           <div class="col align-self-center mb-3 mb-lg-0">
@@ -180,10 +178,10 @@
                   <p><strong>Parents:</strong><span> Molly &amp; Rio</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Birth Date:</strong><span> March 19, 2021</span></p>
+                  <p><strong>Birth Date:</strong><span> Sept 22, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Take Home:</strong><span> May 16, 2021</span></p>
+                  <p><strong>Est. Take Home:</strong><span> Nov 17, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 30-35 lbs.</span></p>
@@ -192,7 +190,7 @@
                   <p><strong>Colors:</strong><span> Tri-Color</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Status:</strong><span class="text-danger"><strong> SOLD OUT</strong></span></p>
+                  <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
                 </li>
               </ul>
             </div>
@@ -217,7 +215,6 @@
       </div>
 
     </section>
-    <!--
     <section class="bg-white">
       <div class="container py-5">
         <div class="row justify-content-around">
@@ -361,7 +358,6 @@
         </div>
       </div>
     </section>
-    -->
     <section class="bg-white" id="movie-mondays">
       <div class="container">
         <div class="row justify-content-around py-5">
