--- a/html/puppies.html
+++ b/html/puppies.html
@@ -134,7 +134,7 @@
                   <p><strong>Est. Birth:</strong><span> Sept 26, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Take Home:</strong><span> Nov 21, 2020</span></p>
+                  <p><strong>Est. Take Home:</strong><span> Nov 28, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 30-35 lbs.</span></p>
@@ -178,13 +178,13 @@
                   <p><strong>Parents:</strong><span> Molly &amp; Rio</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Birth Date:</strong><span> Sept 22, 2021</span></p>
+                  <p><strong>Birth Date:</strong><span> Sept 20, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Take Home:</strong><span> Nov 17, 2021</span></p>
+                  <p><strong>Est. Take Home:</strong><span> Nov 21, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Adult Weight:</strong><span> 30-35 lbs.</span></p>
+                  <p><strong>Est. Adult Weight:</strong><span> 35-40 lbs.</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Colors:</strong><span> Tri-Color</span></p>
@@ -221,13 +221,13 @@
           <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-4">
               <span class="h2 d-block">Movie Mondays!</span>
-              <span class="h2 d-block lead"><strong>Parents:</strong> Molly &amp; Rio</span>
+              <span class="h2 d-block lead"><strong>Parents:</strong> Willow &amp; Rio</span>
               <p class="lead mb-0">Watch our Monday Movie each week to see the puppies grow!</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/IVIGbil9s-8/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/IVIGbil9s-8/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosTlDf62sCnlPhZJHcUzutU&amp;rel=0;autoplay=1&amp;controls=1"
@@ -242,7 +242,7 @@
           <div class="col-lg-4 py-2">
             <h5>Pink Girl (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/oK50AGjLqlc/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?playistType=playlist&amp;list=PLwLcj9Fs1KovkP2q0VtpcBBQaxunCVg7e&amp;rel=0;autoplay=1&amp;controls=1"
@@ -253,7 +253,7 @@
           <div class="col-lg-4 py-2">
             <h5>Red Girl (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/_dFZFaaDsRg/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/_dFZFaaDsRg/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFsUWH3XZ-A3CeU07s52yE&amp;rel=0;autoplay=1&amp;controls=1"
@@ -264,7 +264,7 @@
           <div class="col-lg-4 py-2">
             <h5>Purple Girl (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/LW47ZTP2VKM/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/LW47ZTP2VKM/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosKqzLcHImOdbvXyw8O-kWU&amp;rel=0;autoplay=1&amp;controls=1"
@@ -277,7 +277,7 @@
           <div class="col-lg-4 py-2">
             <h5>Orange Girl (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/hUN1RZj2xAw/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/hUN1RZj2xAw/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kota8InbzjcyMnmwQmsYotAg&amp;rel=0;autoplay=1&amp;controls=1"
@@ -288,7 +288,7 @@
           <div class="col-lg-4 py-2">
             <h5>Yellow Girl (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/CJLbvYtT6z0/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/CJLbvYtT6z0/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kov0voWJ0rhh5YnInzTuaXL6&amp;rel=0;autoplay=1&amp;controls=1"
@@ -299,7 +299,7 @@
           <div class="col-lg-4 py-2">
             <h5>White Girl (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/otXka6wkGfc/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/otXka6wkGfc/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosrH1qrXrs0rLifmS4vYtQ5&amp;rel=0;autoplay=1&amp;controls=1"
@@ -312,7 +312,7 @@
           <div class="col-lg-4 py-2">
             <h5>Lime Green Girl (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/xz3-arZg_n8/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/xz3-arZg_n8/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KoujTJQdEKtdfjMC61izu-B-&amp;rel=0;autoplay=1&amp;controls=1"
@@ -323,7 +323,7 @@
           <div class="col-lg-4 py-2">
             <h5>Black Boy (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/QY7tqK1rL9Y/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/QY7tqK1rL9Y/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosFEFkVA9XDX_x4a7yfxUGv&amp;rel=0;autoplay=1&amp;controls=1"
@@ -334,7 +334,7 @@
           <div class="col-lg-4 py-2">
             <h5>Blue Boy (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/lUCuQVLH57s/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/lUCuQVLH57s/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosGYNu5lBipG_GE09jPKoG6&amp;rel=0;autoplay=1&amp;controls=1"
@@ -347,7 +347,7 @@
           <div class="col-lg-4 py-2">
             <h5>Brown Boy (Willow &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/FAsXrn8b1eE/maxresdefault.jpg" class="bg-image" />
+              <!--<<img alt="Image" src="http://i.ytimg.com/vi/FAsXrn8b1eE/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovjDdcdFij6Zv05NEYVDnGM&amp;rel=0;autoplay=1&amp;controls=1"
@@ -370,7 +370,7 @@
           </div>
           <div class="col-lg-6">
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/Ws50zXgwuIA/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/Ws50zXgwuIA/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koum2WmvbG1-U1z11LnKaCQ1&amp;rel=0;autoplay=1&amp;controls=0"
@@ -385,7 +385,7 @@
           <div class="col-lg-4 py-2">
             <h5>Black Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotNcvPOmSYI4mBjE8ydooF3&amp;rel=0;autoplay=1&amp;controls=0"
@@ -396,7 +396,7 @@
           <div class="col-lg-4 py-2">
             <h5>Brown Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/2UDJVBSi8LQ/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/2UDJVBSi8LQ/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kot41yx1a4Y2EA5rVoi_keRq&amp;rel=0;autoplay=1&amp;controls=0"
@@ -407,7 +407,7 @@
           <div class="col-lg-4 py-2">
             <h5>Green Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/Yvd6mDYOcL0/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/Yvd6mDYOcL0/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFuXYXkN2kqGMTU2hv9Iuu&amp;rel=0;autoplay=1&amp;controls=0"
@@ -420,7 +420,7 @@
           <div class="col-lg-4 py-2">
             <h5>Red Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/EoqlfGJoRHM/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/EoqlfGJoRHM/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosbNNVE4im2vxcSx_3xhso2&amp;rel=0;autoplay=1&amp;controls=0"
@@ -431,7 +431,7 @@
           <div class="col-lg-4 py-2">
             <h5>Purple Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/VumzpDmEeDI/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/VumzpDmEeDI/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouHUXnQjWLR9k3NkwLZW2OU&amp;rel=0;autoplay=1&amp;controls=0"
@@ -442,7 +442,7 @@
           <div class="col-lg-4 py-2">
             <h5>Yellow Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/JQs8ljxj-UY/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/JQs8ljxj-UY/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovLsn9Xe3Jwqv1YCkMNDd8_&amp;rel=0;autoplay=1&amp;controls=0"
@@ -455,7 +455,7 @@
           <div class="col-lg-4 py-2">
             <h5>Pink Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/SduMKikowpg/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/SduMKikowpg/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovCrcQWetCifR4NinjYH9jl&amp;rel=0;autoplay=1&amp;controls=0"
@@ -466,7 +466,7 @@
           <div class="col-lg-4 py-2">
             <h5>White Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/rlco8TcYbSw/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/rlco8TcYbSw/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovwuPzie8bzn19PBMSejScT&amp;rel=0;autoplay=1&amp;controls=0"
@@ -477,7 +477,7 @@
           <div class="col-lg-4 py-2">
             <h5>Light Blue Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/9TsQ-5f8PEg/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/9TsQ-5f8PEg/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koul3gINxAty9m_wToBWTweP&amp;rel=0;autoplay=1&amp;controls=0"
@@ -490,7 +490,7 @@
           <div class="col-lg-4 py-2">
             <h5>Light Purple Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/RDslEFHIIik/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/RDslEFHIIik/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouWqSEWCp8CLL0esDLsMoyC&amp;rel=0;autoplay=1&amp;controls=0"
@@ -501,7 +501,7 @@
           <div class="col-lg-4 py-2">
             <h5>Orange Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/9TGEr_0oRh0/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/9TGEr_0oRh0/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotrnpbZ22nVBOpFjmrsUmaW&amp;rel=0;autoplay=1&amp;controls=0"
@@ -512,7 +512,7 @@
           <div class="col-lg-4 py-2">
             <h5>Tan Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/9ENKKU-BxAc/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/9ENKKU-BxAc/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosUyvx3hXYeXOElIY1q3hrJ&amp;rel=0;autoplay=1&amp;controls=0"
@@ -525,7 +525,7 @@
           <div class="col-lg-4 py-2">
             <h5>Blue Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="http://i.ytimg.com/vi/f-Q6KVgMMTs/maxresdefault.jpg" class="bg-image" />
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/f-Q6KVgMMTs/maxresdefault.jpg" class="bg-image" /> -->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kott7JjtVsMXu6uWCFLgWcRZ&amp;rel=0;autoplay=1&amp;controls=0"
