--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -93,6 +93,22 @@
       </div>
     </section>
     <div class="bg-white">
+      <section class="spacer-y-3 bg-dark2">
+        <div class="container">
+          <div class="row justify-content-around align-items-center flex-row-reverse">
+            <div class="col-sm-6 col-lg-3 mb-3 mb-sm-0">
+              <img class="d-md-block rounded-circle shadow-lg" src="assets/img/ruth.png" alt="Ruth">
+            </div>
+            <div class="col-sm-6 col-lg-8">
+              <i class="material-icons text-warning badge-lg">star</i>
+              <span class="h1 text-dark">Ruth</span>
+              <span class="d-block mt-3 mt-md-4 lead text-dark text-justify">&ldquo;Ruth is a fantastic puppy! She has beautiful coat and colorful markings. Whenever we go, people always comment on what a beautiful dog she is. She also has the best personality. She is so playful, loves to explore and is quick to learn manners and tricks. I can't imagine my life without my sweet baby Ruth! Thank you Diane for breeding and raising such amazing aussiedoodle puppies!&rdquo;</span>
+              <span class="h6 d-block mt-3 mt-md-4 text-right text-dark"> - M. Getto</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0">
       <section class="spacer-y-3">
         <div class="container">
           <div class="row justify-content-around align-items-center">
